# perception_app

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  README_CN.md  README_usage.md  config.json
build-env-on-ubuntu-bionic/: README.md
cmake/: aarch64-toolchain.cmake  compiler_flags.cmake  linux_config.cmake  options.cmake
examples/: CMakeLists.txt  README.md
examples/0..Demo/: CMakeLists.txt  ConfigHelper.hpp  DeviceManager.hpp  ImageReceiver.cpp  ImageReceiver.hpp  Logger.hpp  README.md  main.cpp
examples/0.basic.enumerate/: CMakeLists.txt
examples/0.basic.quick_start/: CMakeLists.txt
examples/1.stream.callback/: CMakeLists.txt
examples/1.stream.infrared/: CMakeLists.txt
examples/1.stream.multi_streams/: CMakeLists.txt
examples/2.device.control/: CMakeLists.txt
examples/2.device.firmware_update/: CMakeLists.txt  README.md  device_firmware_update.cpp
examples/2.device.hot_plugin/: CMakeLists.txt
examples/2.device.multi_devices_firmware_update/: CMakeLists.txt
examples/2.device.optional_depth_presets_update/: CMakeLists.txt
examples/2.device.playback/: README.md  device_playback.cpp
examples/2.device.record/: CMakeLists.txt  device_record.cpp
examples/3.advanced.common_usages/: common_usages.cpp
examples/3.advanced.hdr/: CMakeLists.txt
examples/3.advanced.hw_d2c_align/: CMakeLists.txt
examples/3.advanced.laser_interleave/: CMakeLists.txt  laser_interleave.cpp
examples/3.advanced.multi_devices_sync/: CMakeLists.txt
examples/3.advanced.point_cloud/: CMakeLists.txt  point_cloud.cpp
examples/3.advanced.post_processing/: CMakeLists.txt
examples/5.wrapper.pcl/pcl/: CMakeLists.txt
examples/c/: CMakeLists.txt
examples/c_examples/0.c_quick_start/: CMakeLists.txt
examples/c_examples/1.c_enumerate/: CMakeLists.txt  enumerate.c
examples/cpp/: CMakeLists.txt
examples/cpp/Demo/: CMakeLists.txt  ImageReceiver.cpp
examples/cpp/Sample-AlignFilterViewer/: CMakeLists.txt
examples/cpp/Sample-ColorViewer/: CMakeLists.txt
examples/cpp/Sample-CommonUsages/: CMakeLists.txt
examples/cpp/Sample-DepthUnitControl/: CMakeLists.txt
examples/cpp/Sample-DepthViewer/: CMakeLists.txt
examples/cpp/Sample-DepthWorkMode/: CMakeLists.txt
examples/cpp/Sample-DoubleInfraredViewer/: CMakeLists.txt
examples/cpp/Sample-FirmwareUpgrade/: CMakeLists.txt
examples/cpp/Sample-HdrMerge/: CMakeLists.txt
examples/cpp/Sample-HelloOrbbec/: CMakeLists.txt
examples/cpp/Sample-HotPlugin/: CMakeLists.txt
examples/cpp/Sample-ImuReader/: CMakeLists.txt
examples/cpp/Sample-InfraredViewer/: CMakeLists.txt
examples/cpp/Sample-MultiDevice/: CMakeLists.txt
examples/cpp/Sample-MultiDeviceSync/: CMakeLists.txt
examples/cpp/Sample-MultiStream/: CMakeLists.txt
examples/cpp/Sample-NetDevice/: CMakeLists.txt
examples/cpp/Sample-Playback/: CMakeLists.txt
examples/cpp/Sample-PointCloud/: CMakeLists.txt
examples/cpp/Sample-PostProcessing/: CMakeLists.txt
examples/cpp/Sample-QuickStart/: CMakeLists.txt
examples/cpp/Sample-Recorder/: CMakeLists.txt
examples/cpp/Sample-SaveToDisk/: CMakeLists.txt
examples/cpp/Sample-SensorControl/: CMakeLists.txt
examples/cpp/Sample-SyncAlignViewer/: CMakeLists.txt
examples/cpp/Sample-Transformation/: CMakeLists.txt
examples/publish_files/: CMakeLists.txt  build_examples_macos.sh
perception_app/: CMakeLists.txt  StateControlTester.cpp  camera_bin.cpp  inference_demo.cpp  main.cpp
perception_app/calibration/: CMakeLists.txt  CalibrationManager.cpp  CalibrationManager.hpp
perception_app/com/: CMakeLists.txt  CommunicationProxy.cpp  CommunicationProxy.hpp  FifoComm.cpp  FifoComm.hpp
perception_app/com_qs/: .clang-format  .clang-tidy  .cmake-format
perception_app/com_qs/build_tc/: CMakeCache.txt  Makefile  cmake_install.cmake
perception_app/com_qs/src/transport/: serial_transport.cc
perception_app/core/: CMakeLists.txt  ConfigHelper.hpp  DeviceManager.cpp  DumpHelper.cpp  DumpHelper.hpp  ImageReceiver.cpp  ImageReceiver.hpp  MetadataHelper.cpp  MetadataHelper.hpp  PerceptionSystem.cpp  PerceptionSystem.hpp
perception_app/inference/: CMakeLists.txt  InferenceBase.hpp  InferenceManager.cpp  InferenceManager.hpp  ONNXInference.hpp  README.md
perception_app/utils/: CMakeLists.txt  Logger.cpp  Logger.hpp  ThreadPool.hpp
perception_framework/: CMakeLists.txt  README.md  main.cpp  run_camera.sh  run_demo.sh
perception_framework/calibration/: CMakeLists.txt  CalibrationManager.cpp  CalibrationManager.hpp
perception_framework/com/: CommunicationProxy.hpp  ICommunicationImpl.hpp
perception_framework/com_qs/: .gitignore  CMakeLists.txt
perception_framework/com_qs/inc/session/: session.h
perception_framework/com_qs/src/session/: session.cc
perception_framework/com_qs/src/transport/: serial_transport.h
perception_framework/com_qs/test/: light_main.cc  session_main.cc
perception_framework/com_qs/tools/: check.sh  format.sh
perception_framework/config/: CMakeLists.txt  ConfigHelper.cpp  ConfigHelper.hpp  ConfigParser.cpp  ConfigParser.hpp
perception_framework/core/: CMakeLists.txt  DeviceManager.hpp  DumpHelper.cpp  DumpHelper.hpp  ImageReceiver.cpp  ImageReceiver.hpp  MetadataHelper.cpp  MetadataHelper.hpp  PerceptionSystem.cpp  PerceptionSystem.hpp
perception_framework/inference/: CMakeLists.txt  InferenceManager.cpp  ONNXInference.cpp
perception_framework/utils/: CMakeLists.txt  CVWindow.cpp  CVWindow.hpp  Logger.cpp  Logger.hpp  utils.hpp  utils_opencv.cpp
src/: CMakeLists.txt
src/media/: CMakeLists.txt
src/media/playback/: PlaybackDepthWorkModeManager.cpp  PlaybackDepthWorkModeManager.hpp  PlaybackDevice.hpp  PlaybackDevicePort.cpp  PlaybackFilterCreationStrategy.cpp  PlaybackFilterCreationStrategy.hpp  PlaybackPropertyAccessor.cpp  PlaybackPropertyAccessor.hpp
src/media/ros/: RosFileFormat.hpp  RosbagReader.cpp  RosbagWriter.hpp
src/shared/environment/: CMakeLists.txt  EnvConfig.cpp  EnvConfig.hpp
tests/: CMakeLists.txt  StateControlTester.cpp  camera_bin.cpp  config_usage_example.cpp  inference_demo.cpp  test_nosignal_optimization.cpp
wrappers/: README.md
(+139 files in other folders)
